--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
+<!doctype html>
+<html lang="id">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Cara Membuat Sabun Laundry - Ebook PDF</title>
+  <meta name="description" content="Pelajari cara membuat sabun laundry produksi rumahan. Ebook PDF lengkap, cocok untuk usaha kecil-kecilan.">
+  <style>
+    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif;margin:0;background:#f9fafb;color:#222;line-height:1.6}
+    header{background:#fff;padding:20px;box-shadow:0 1px 6px rgba(0,0,0,.08)}
+    .container{max-width:800px;margin:auto;padding:20px}
+    .hero{display:flex;flex-direction:column;align-items:center;text-align:center}
+    h1{margin-top:0;font-size:clamp(1.8rem,4vw,2.4rem)}
+    .btn{display:inline-block;margin-top:20px;background:#e63946;color:#fff;padding:12px 20px;border-radius:8px;text-decoration:none;font-weight:bold}
+    footer{text-align:center;font-size:0.9rem;margin-top:40px;color:#666}
+  </style>
+</head>
+<body>
+  <header><div class="container"><strong>BisnisRumahan.id</strong></div></header>
+  <main class="container hero">
+    <h1>Cara Membuat Sabun Laundry Produksi Rumahan</h1>
+    <p>Ebook PDF 15 halaman berisi panduan lengkap, resep, dan tips agar kamu bisa memulai bisnis laundry skala rumah dengan modal kecil.</p>
+    <img src="images/sabun-laundry.jpg" alt="Sabun laundry buatan rumahan" style="max-width:100%;border-radius:12px;box-shadow:0 4px 16px rgba(0,0,0,.1);margin:20px 0">
+    <p><strong>Harga:</strong> Rp 25.000</p>
+    <a class="btn" href="https://trakteer.id/username/tip?quantity=25000" target="_blank">Beli & Dapatkan Link PDF</a>
+  </main>
+  <footer>© <span id="year"></span> BisnisRumahan.id • Hubungi: <a href="mailto:emailkamu@gmail.com">emailkamu@gmail.com</a></footer>
+  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
+</body>
+</html>
 index.html
